--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "chip8",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "typescript": "^4.6.4",
+    "vite": "^3.2.5"
   },
   "author": "",
   "license": "ISC"
